// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlatButton Snap should renders correctly with isPrimary false 1`] = `
<button
  accessKey="l"
  className="bt-flat"
  onClick={[Function]}
  title="Click to load [l]"
>
  <span
    className="bt-flat__caption"
  >
    <span>
      
    </span>
    <span
      style={
        Object {
          "textDecoration": "underline",
        }
      }
    >
      L
    </span>
    <span>
      oad
    </span>
  </span>
</button>
`;

exports[`FlatButton Snap should renders correctly with isPrimary true 1`] = `
<button
  accessKey="l"
  className="bt-flat"
  onClick={[Function]}
  style={
    Object {
      "color": "#607d8b",
    }
  }
  title="Click to load [l]"
>
  <span
    className="bt-flat__caption"
  >
    <span>
      
    </span>
    <span
      style={
        Object {
          "textDecoration": "underline",
        }
      }
    >
      L
    </span>
    <span>
      oad
    </span>
  </span>
</button>
`;
